# DRAMsim3

./: CMakeLists.txt  CMakeLists.txt        (edit)  dramsim3.txt
ext/fmt/: fmt_char_traits_fix.h
src/: cpu.h
tests/CMakeLists.txt    (create)/: hello_test.cc     (create)  # basic "hello world" Catch2 test
